Revision history for Plack-Middleware-Statsd

{{$NEXT}}
  [Toolchain]
  - Removed redundant prerequisites from cpanfile and META files.

v0.3.4    2018-03-01 15:39:03+00:00 Europe/London
  [Bug Fixes]
  - Fix bug with counting content types that contain dots, e.g.
    "image/vnd.microsoft.icon".

v0.3.3    2018-02-13 15:24:11+00:00 Europe/London
  [Documentation]
  - Fixed module import in SYNOPSIS.

v0.3.2    2018-02-10 23:36:10+00:00 Europe/London
  [Documentation]
  - Added missing section about the sample_rate attribute.

  - Fixed typo in SYNOPSIS.

v0.3.1    2018-02-10 23:22:47+00:00 Europe/London
  [Enhancements]
  - Re-added the sampling rate attribute.

  [Incompatabilities]
  - Logs a float for the response time, instead of an integer. This is
    an enhancement, but may cause issues with some statsd daemons.

  [Documentation]
  - Added note about modifying sample rates.

  - Added note about support for older Perl versions.

  - Updated the SYNOPSIS to show the recommended Statsd client.

  - Updated the section for the client attribute on compatible Statsd
    modules.

  [Other Changes]
  - Bumped version of Net::Statsd::Tiny as a recommended prerequisite.

v0.3.0    2018-02-06 11:10:44+00:00 Europe/London
  [Enhancements]
  - Catch log errors when calling the statsd client, #1.

  [Tests]
  - Show diagnostics on failure.

  [Other Changes]
  - Added Net::Statsd::Tiny as a recommended prerequisite.

v0.2.1    2018-02-05 14:16:07+00:00 Europe/London
  [Enhancements]
  - Allow the statsd client to support the timing method as an
    alternative to the timing_ms method.

  - Call client's flush method (if there is one) when done, to support
    Net::Statsd::Tiny.

  [Incompatible Changes]
  - Removed the sample_rate attribute.

  [Documentation]
  - Added an example of accessing this statsd client from Catalyst.

  - Only list the client methods that are actually used.

  [Tests]
  - Explicitly specify a dependency of Test::Most for cpantesters.
