@@ -164,6 +164,11 @@ sub finalize {
 
 # KNOWN ISSUES
 
+## Non-standard HTTP status codes
+
+If your application is returning a status code that is not handled by
+[HTTP::Status](https://metacpan.org/pod/HTTP::Status), then the metrics may not be logged for that reponse.
+
 ## Support for older Perl versions
 
 This module requires Perl v5.10 or newer.
